osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experiment_revision_error.txt
error: experiment revision must be zero or greater
--> main.sml:3:96
     |
   3 | A = Experiment(entity=E1, buckets=['control', 'b'], bucket_sizes=[10, 10], version=1, revision=-1)
     |                                                                                                 ^